--- a/pages/index.css
+++ b/pages/index.css
@@ -113,7 +113,7 @@
   background-color: #0a2750;
   background-image: url(../images/background_recipes.svg);
   background-size: cover;
-  position: center;
+  background-position: center;
   margin: 0;
   padding: 100px 80px 215px;
   color: white;
