--- a/pages/index.css
+++ b/pages/index.css
@@ -61,7 +61,7 @@
 .header__span-accent {
   font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: italic;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 60px;
   line-height: 72px;
   color: #3f96f3;
@@ -74,7 +74,7 @@
   padding-top: 0;
   font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 20px;
   line-height: 30px;
 }
