--- a/pages/index.css
+++ b/pages/index.css
@@ -74,7 +74,7 @@
   padding-top: 0;
   font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 20px;
   line-height: 30px;
 }
