--- a/pages/index.css
+++ b/pages/index.css
@@ -61,7 +61,7 @@
 .header__span-accent {
   font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: italic;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 60px;
   line-height: 72px;
   color: #3f96f3;
