--- a/pages/index.css
+++ b/pages/index.css
@@ -168,7 +168,7 @@
 .reservation {
   background-color: #d9e7ff;
   background-image: url(../images/background_reservation.svg);
-  position: center;
+  background-position: center;
   background-size: cover;
   padding: 100px 0 120px;
 }
