--- a/pages/index.css
+++ b/pages/index.css
@@ -1,273 +1,9 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.header {
-  background-color: #ffffff;
-  background-image: url(../images/background_header.svg);
-  height: 800px;
-  padding: 30px 80px 40px;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  background-size: cover;
-  position: relative;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-.nav__logo {
-  position: relative;
-  height: 39px;
-  width: 105px;
-  left: -50px;
-  margin-bottom: 183px;
-}
-
-.nav__links {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  gap: 20px;
-  font-family: "Inter", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-}
-
-.header__title {
-  max-width: 729px;
-  margin: 0 0 28px;
-  font-family: "Inter", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-.header__span-accent {
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3f96f3;
-  display: block;
-}
-
-.header__description {
-  max-width: 683px;
-  margin: 0;
-  padding-top: 0;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-  margin: 0;
-  padding: 0;
-}
-
-.header__footer {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  display: flex;
-  margin-top: auto;
-  justify-content: space-between;
-  align-items: end;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.content {
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-  background-position: center;
-  margin: 0;
-  padding: 100px 80px 215px;
-  color: white;
-}
-
-.recipes__title {
-  max-width: 580px;
-  font-family: "Inter", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 0 0 24px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 0 0 80px;
-}
-
-.recipes__videos {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin: 0;
-  padding: 0;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  margin: 0;
-  padding: 0;
-}
-.recipes__video-caption {
-  font-family: "Inter", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-position: center;
-  background-size: cover;
-  padding: 100px 0 120px;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  border: 1px solid #838383;
-  margin: 8px 0 32px;
-  border-radius: 4px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #000;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000;
-}
-
-.form__button {
-  width: 100%;
-  padding: 20px 0;
-  border-radius: 4px;
-  border: none;
-  margin-bottom: 32px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #fff;
-  background-color: #1878dc;
-  transition-property: background-color;
-}
-
-.form__button:hover {
-  background-color: #3f96f3;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000;
-}
-.form_checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
-
-.menu {
-}
-
-.about {
-}
-
-.footer {
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/about.css");
+@import url("../blocks/footer.css");
