--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,2 +1,85 @@
 .about {
+  background-color: #0a2850;
+  color: white;
+  padding: 0 80px 0;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+}
+
+.about__title {
+  font-family: "Inter", "Times New Roman", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  max-width: 251px;
+  margin: 0;
+  padding-top: 100px;
+}
+
+.about__content {
+  font-family: "Noto Serif", "Times New Roman", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 660px;
+  margin: 119px 0 173px;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.about__paragraph {
+  margin: 0 0 20px;
+  padding: 0;
+}
+
+.about__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.about__circle {
+  height: 426px;
+  width: 426px;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #1878dc;
+  margin: 0;
+  padding: 0;
+  left: -129px;
+  top: -152px;
+  z-index: -1;
+}
+
+.about__circle_animation_blurred {
+  height: 426px;
+  width: 426px;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #1878dc;
+  margin: 0;
+  padding: 0;
+  left: -129px;
+  top: -152px;
+  z-index: -1;
+  animation: pulsate 1.3s ease-in-out infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.6;
+  }
+
+  100% {
+    transform: scale(1.25);
+    opacity: 1;
+  }
 }
