--- a/blocks/form.css
+++ b/blocks/form.css
@@ -10,7 +10,7 @@
   border: 1px solid #838383;
   margin: 8px 0 32px;
   border-radius: 4px;
-  font-family: Inter;
+  font-family: Inter, "Time New Roman", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
