--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,2 +1,39 @@
 .menu {
+  background-color: #fff;
+  background-image: url(../images/background_menu.svg);
+  background-position: center;
+  background-size: cover;
+  padding: 100px 0 100px;
+}
+
+.menu__title {
+  font-family: "Inter", "Time New Roman", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0 auto 24px;
+  text-align: center;
+  max-width: 780px;
+}
+
+.menu__subtitle {
+  font-family: "Noto Serif", "Time New Roman", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  max-width: 780px;
+  margin: 0 auto 100px;
+}
+
+.menu__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
+  gap: 100px;
+  padding: 0;
+  margin: 0;
 }
