--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -9,7 +9,7 @@
 .reservation__title {
   margin: 0 0 80px;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, "Time New Roman", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
