--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,7 +1,7 @@
 .about {
   background-color: #0a2850;
   color: white;
-  padding: 0 80px 0;
+  padding: 100px 80px 0;
   position: relative;
   z-index: 0;
   overflow: hidden;
@@ -10,24 +10,23 @@
 }
 
 .about__title {
-  font-family: "Inter", "Times New Roman", sans-serif;
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
   max-width: 251px;
   margin: 0;
-  padding-top: 100px;
 }
 
 .about__content {
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
+  font-family: "Noto Serif", "Arial", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   max-width: 660px;
-  margin: 119px 0 173px;
+  margin: 19px 0 173px;
   margin-left: auto;
   display: flex;
   flex-direction: column;
