--- a/blocks/header.css
+++ b/blocks/header.css
@@ -13,7 +13,7 @@
 .header__title {
   max-width: 729px;
   margin: 0 0 28px;
-  font-family: "Inter", "Times New Roman", sans-serif;
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 60px;
@@ -21,7 +21,7 @@
   letter-spacing: -0.6px;
 }
 .header__span-accent {
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
+  font-family: "Noto Serif", "Arial", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -34,7 +34,7 @@
   max-width: 683px;
   margin: 0;
   padding-top: 0;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
+  font-family: "Noto Serif", "Arial", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -52,7 +52,7 @@
 }
 
 .header__footer {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
