--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -10,7 +10,7 @@
 
 .recipes__title {
   max-width: 580px;
-  font-family: "Inter", "Times New Roman", sans-serif;
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -20,7 +20,7 @@
 
 .recipes__subtitle {
   max-width: 438px;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
+  font-family: "Noto Serif", "Arial", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -42,9 +42,10 @@
   height: 273px;
   margin: 0;
   padding: 0;
+  border: none;
 }
 .recipes__video-caption {
-  font-family: "Inter", "Times New Roman", sans-serif;
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
