Updated code for Sprint 2 final stage round 2

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -10,7 +10,7 @@
 }
 
 .about__title {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -20,7 +20,7 @@
 }
 
 .about__content {
-  font-family: "Noto Serif", "Arial", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -55,16 +55,6 @@
 }
 
 .about__circle_animation_blurred {
-  height: 426px;
-  width: 426px;
-  position: absolute;
-  border-radius: 50%;
-  background-color: #1878dc;
-  margin: 0;
-  padding: 0;
-  left: -129px;
-  top: -152px;
-  z-index: -1;
   animation: pulsate 1.3s ease-in-out infinite;
 }
 
