--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -26,7 +26,7 @@
 }
 
 .footer__social-heading {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -36,7 +36,7 @@
 }
 
 .footer__list {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -76,7 +76,7 @@
 }
 
 .footer__copyright {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
