--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,7 +3,7 @@
 }
 
 .card__title {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -18,7 +18,7 @@
 }
 
 .card__list-item {
-  font-family: "Noto Serif", "Arial", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
