--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,37 +8,41 @@
   box-sizing: border-box;
   background-size: cover;
   position: relative;
+  z-index: -1;
 }
 
 .header__title {
   max-width: 729px;
   margin: 0 0 28px;
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
   letter-spacing: -0.6px;
+  z-index: 1;
 }
 .header__span-accent {
-  font-family: "Noto Serif", "Arial", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
   line-height: 72px;
   color: #3f96f3;
   display: block;
+  z-index: 1;
 }
 
 .header__description {
   max-width: 683px;
   margin: 0;
   padding-top: 0;
-  font-family: "Noto Serif", "Arial", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  z-index: 1;
 }
 
 .header__image {
@@ -49,10 +53,11 @@
   right: 5px;
   margin: 0;
   padding: 0;
+  z-index: 0;
 }
 
 .header__footer {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -62,6 +67,7 @@
   margin-top: auto;
   justify-content: space-between;
   align-items: end;
+  z-index: 1;
 }
 
 .header__paragraph {
