--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -16,7 +16,7 @@
   padding: 0;
   margin: 0;
   gap: 20px;
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
