--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,7 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  font-family: "Inter", Arial, Helvetica, serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 20px;
   margin-left: auto;
