--- a/blocks/form.css
+++ b/blocks/form.css
@@ -29,7 +29,7 @@
 }
 
 .form__label {
-  font-family: Inter;
+  font-family: Inter, "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -43,7 +43,7 @@
   border-radius: 4px;
   border: none;
   margin-bottom: 32px;
-  font-family: Inter;
+  font-family: Inter, "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
